fixed y overflow on some text heavy pages

--- a/client/src/pages/AcceptInviteAndJoinPage/AcceptInviteAndJoinPage.module.css
+++ b/client/src/pages/AcceptInviteAndJoinPage/AcceptInviteAndJoinPage.module.css
@@ -4,6 +4,7 @@
   margin: 0 auto;
   align-items: center;
   width: 90%;
+  overflow-y: auto;
 }
 
 h2 {
