--- a/client/src/pages/GroupCodeExplanationPage/GroupCodeExplanationPage.module.css
+++ b/client/src/pages/GroupCodeExplanationPage/GroupCodeExplanationPage.module.css
@@ -6,4 +6,5 @@
   text-align: center;
   width: 90%;
   margin: 0 auto;
+  overflow-y: auto;
 }
