--- a/client/src/pages/OnboardingPage/OnboardingPage.module.css
+++ b/client/src/pages/OnboardingPage/OnboardingPage.module.css
@@ -1,6 +1,7 @@
 .container {
   width: 90%;
   margin: 0 auto;
+  overflow-y: auto;
 }
 
 h2 {
